cabal-version: 2.4

name:        opal
category:    Language
version:     0.0.0
synopsis:    TODO
description: TODO 

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/opal-lang
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2
  GHC == 9.0.2

source-repository head
  type:     git
  location: https://github.com/riz0id/opal-lang

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  default-extensions:
    BangPatterns BlockArguments FlexibleContexts FlexibleInstances GADTs 
    ImportQualifiedPost KindSignatures LambdaCase MagicHash OverloadedRecordDot 
    NegativeLiterals UnboxedTuples UnliftedNewtypes

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , base >= 4.15.1 && < 4.17
    , mtl
    , prettyprinter
    , source-locations

library
  import:         common
  hs-source-dirs: opal/src

  default-extensions:
    DataKinds DeriveDataTypeable GeneralizedNewtypeDeriving 
    PatternSynonyms ViewPatterns

  ghc-options:
    -j4

    -O3

    -fmax-simplifier-iterations=20
    
    -- `-foptimal-applicative-do` is enabled to get to ensure optimal
    -- applicative layout in the "Opal.Reader" parse, which depends on the 
    -- -XApplicativeDo extension.
    -foptimal-applicative-do

    -ddump-to-file
    -ddump-stg-final
    -ddump-simpl
    -dppr-cols=120
    -dsuppress-module-prefixes
    -dsuppress-uniques
    -dyno

  build-depends:
    , containers
    , ghc-prim
    , parsel
    , primitive
    , prim-bool 
    , prim-ord
    , prim-bytearray
    , template-haskell 

  exposed-modules:
    Data.Exception.Memory
    Data.IO.FileBuffer
    Opal.Common.GenSym
    Opal.Common.Name
    Opal.Common.Symbol
    Opal.Core
    Opal.Core.Atom
    Opal.Core.Datum
    Opal.Core.Prim
    Opal.Core.SExp
    Opal.Evaluate
    Opal.Expand.Common.Intern
    Opal.Expand.Common.Intern.Monad
    Opal.Expand.Syntax
    Opal.Expand.Syntax.Binding
    Opal.Expand.Syntax.BindStore
    Opal.Expand.Syntax.MultiScopeSet
    Opal.Expand.Syntax.ScopeSet
    Opal.Expand.Transform
    Opal.Parse
    Opal.Print
    Opal.Read

executable opal
  import:         common
  hs-source-dirs: compiler/src
  main-is:        Main.hs
  ghc-options:    -O2

  build-depends:  
    , opal
    , parsel

-- test-suite test
--   import:         common
--   type:           exitcode-stdio-1.0
--   hs-source-dirs: opal-lang/test
--   main-is:        Main.hs

--   ghc-options:
--     -threaded
--     -rtsopts
--     "-with-rtsopts=-N"

--   build-depends:
--     , hedgehog
--     , opal-lang
--     , tasty
--     , tasty-hedgehog 

--   other-modules: 
--     Test.Compat
--     Test.Core
--     Test.Common.Gen
--     Test.Expand
--     Test.Expand.Parse
--     Test.Expand.Syntax
--     Test.Expand.Syntax.Gen
